<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.gymapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_WorkoutExecutionFragment"
            app:destination="@id/WorkoutExecutionFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_CreateWorkoutFragment"
            app:destination="@id/CreateWorkoutFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/WorkoutExecutionFragment"
        android:name="com.example.gymapp.WorkoutExecutionFragment"
        android:label="@string/workout_execution_label"
        tools:layout="@layout/fragment_workout_execution" />

    <fragment
        android:id="@+id/CreateWorkoutFragment"
        android:name="com.example.gymapp.CreateWorkoutFragment"
        android:label="@string/create_workout_label"
        tools:layout="@layout/fragment_create_workout" />

    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.example.gymapp.ProfileFragment"
        android:label="@string/profile_label"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.gymapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>